--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="./src/assets/notion-logo.png" />
+    <script src="https://kit.fontawesome.com/c625887cf2.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Notion</title>
   </head>
